js/js.translator/testData/incremental/invalidation/toplevelPropertiesWithIntraModuleInliner/lib2/l2.20.kt
fun testToplevelProperties(): Int {
    return inlineGlobalValWrapper().toInt() +
            14.inlineExtensionPropertyWrapper().toInt()
}
